# atlas-rdf-examples

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: builds.yml
RDFGoodRunsLists/: CMakeLists.txt
RDFGoodRunsLists/RDFGoodRunsLists/: AddGRLColumn.h  RDFGoodRunsListsDict.h  selection.xml
RDFGoodRunsLists/src/: AddGRLColumn.cxx
RDFGoodRunsLists/utils/: rdfgrl_test.cxx  rdfgrl_test.py
RDFTrigDecision/: CMakeLists.txt
RDFTrigDecision/RDFTrigDecision/: AddTriggerDecisionColumn.h  RDFTrigDecisionDict.h  TrigDecisionToolArray.h  selection.xml
RDFTrigDecision/src/: AddTriggerDecisionColumn.cxx  TrigDecisionToolArray.cxx
RDFTrigDecision/utils/: rdftdt_test.cxx  rdftdt_test.py
